data/derived/comb/progs/unify/prog0504.ml.out
Characters 164-196:
  | Average (a, b) -> ((eval(a, x, y) +. eval(b, x, y)) / 2.0)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
